--- a/header/pagi.css
+++ b/header/pagi.css
@@ -12,7 +12,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
-    background: linear-gradient(135deg, #14161781, #0103077e);
+    background: linear-gradient(135deg, #0580bd81, #4de6067e);
     color: white;
     position: sticky;
     top: 0;
@@ -46,7 +46,7 @@ body {
   }
   
   .nav-menu a:hover {
-    color: #00a2ff;
+    color: #e813ac;
   }
   
   .search-container {
@@ -68,7 +68,7 @@ body {
   }
   
   .search-button {
-    background: #0080ff;
+    background: #06f516;
     border: none;
     padding: 8px 12px;
     margin-left: 8px;
@@ -80,13 +80,13 @@ body {
   }
   
   .search-button:hover {
-    background: #0017e6;
+    background: #f1aa06;
   }
   
   .hero-section {
     text-align: center;
     padding: 100px 20px;
-    background: linear-gradient(to right, #3936fe, #5fa4ff);
+    background: linear-gradient(to right, #beef0a, #dcff5f);
     color: white;
   }
   
@@ -104,7 +104,7 @@ body {
     display: inline-block;
     padding: 12px 30px;
     background: white;
-    color: #333;
+    color: #e8134f;
     font-weight: bold;
     border-radius: 50px;
     text-decoration: none;
@@ -112,7 +112,7 @@ body {
   }
   
   .cta-button:hover {
-    background: #333;
+    background: #d60707;
     color: white;
   }
   
